FIX Scroll overflow

--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,6 @@
   background-color: #efefef;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-  overflow: hidden;
   z-index: 9999;
 }
 
